--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-wheel-pick": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
