--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@realm/react": "^0.6.2",
     "date-picker": "^0.3.0",
     "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
-    "mongodb": "^6.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
@@ -29,6 +28,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
+    "realm": "^12.3.1",
     "webpack-dev-server": "^4.15.1",
     "yarn": "^1.22.21"
   },
