--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/webpack-config": "^18.1.3",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@realm/react": "^0.6.2",
+    "@typescript-eslint/parser": "^5.62.0",
     "date-picker": "^0.3.0",
     "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
@@ -28,7 +29,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "realm": "^12.3.1",
+    "typescript": "^4.9.5",
     "webpack-dev-server": "^4.15.1",
     "yarn": "^1.22.21"
   },
@@ -36,7 +37,7 @@
     "@babel/core": "^7.20.0",
     "eslint": "^8.54.0",
     "eslint-config-universe": "^12.0.0",
-    "prettier": "^3.1.0"
+    "prettier": "^2.8.8"
   },
   "private": true
 }
