--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scorecard",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": ".",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,13 +11,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.1.3",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@realm/react": "^0.6.2",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@rneui/base": "^4.0.0-rc.8",
+    "android": "^0.0.8",
     "date-picker": "^0.3.0",
     "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
@@ -29,7 +32,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^4.9.5",
+    "realm": "^12.3.1",
     "webpack-dev-server": "^4.15.1",
     "yarn": "^1.22.21"
   },
@@ -37,7 +40,7 @@
     "@babel/core": "^7.20.0",
     "eslint": "^8.54.0",
     "eslint-config-universe": "^12.0.0",
-    "prettier": "^2.8.8"
+    "prettier": "^3.1.0"
   },
   "private": true
 }
