--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "android": "^0.0.8",
     "date-picker": "^0.3.0",
     "expo": "^49.0.21",
+    "expo-dev-client": "~2.4.12",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
