--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-native-web": "~0.19.6",
     "realm": "^12.3.1",
-    "webpack-dev-server": "^4.15.1",
-    "yarn": "^1.22.21"
+    "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
