--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
@@ -21,21 +20,16 @@
     "@rneui/base": "^4.0.0-rc.8",
     "android": "^0.0.8",
     "date-picker": "^0.3.0",
-    "expo": "^49.0.21",
-    "expo-dev-client": "~2.4.12",
-    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.7",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-web": "~0.19.6",
-    "realm": "^12.3.1",
-    "webpack-dev-server": "^4.15.1"
+    "realm": "^12.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
