Amended to template

--- a/app.json
+++ b/app.json
@@ -1,37 +1,4 @@
 {
-  "expo": {
-    "name": "ScoreCard",
-    "slug": "ScoreCard",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.apcave.ScoreCard"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.apcave.ScoreCard"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "38a3d31e-a3f1-4f99-a2e5-6d256c59a1ee"
-      }
-    }
-  }
+  "name": "ScoreCard",
+  "displayName": "ScoreCard"
 }
