--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@realm/react": "^0.6.2",
     "@rneui/base": "^4.0.0-rc.8",
+    "expo": "^49.0.21",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "metro": "^0.80.1",
     "react": "18.2.0",
-    "react-native": "0.72.7",
+    "react-native": "0.72.6",
     "react-native-element-dropdown": "^2.10.1",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.7.4",
+    "react-native-screen": "^1.0.1",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
     "realm": "^12.3.1"
   },
@@ -35,13 +42,14 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/parser": "^5.0.1",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.7.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.4.4"
   },
   "engines": {
     "node": ">=16"
