--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdi/js": "^7.3.67",
+    "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@realm/react": "^0.6.2",
@@ -21,15 +24,20 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "metro": "^0.80.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-element-dropdown": "^2.10.1",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-get-random-values": "^1.10.0",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-get-random-values": "~1.9.0",
+    "react-native-macos": "^0.72.11",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-safe-area-context": "^4.7.4",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-swipe-list": "^0.0.2",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.2",
     "realm": "^12.3.1"
   },
@@ -49,7 +57,7 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.5.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.4.4"
+    "typescript": "^5.1.3"
   },
   "engines": {
     "node": ">=16"
