--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@mdi/js": "^7.3.67",
-    "@mdi/react": "^1.6.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
@@ -20,6 +18,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@realm/react": "^0.6.2",
     "@rneui/base": "^4.0.0-rc.8",
+    "clean": "^4.0.2",
     "expo": "^49.0.21",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -28,14 +27,13 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-element-dropdown": "^2.10.1",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-get-random-values": "~1.9.0",
-    "react-native-macos": "^0.72.11",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-swipe-list": "^0.0.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.2",
