--- a/app.json
+++ b/app.json
@@ -5,5 +5,12 @@
   },
   "ios": {
     "bundleIdentifier": "com.apcave.scorecard"
+  },
+  "expo": {
+    "extra": {
+      "eas": {
+        "projectId": "0e489904-20ba-406d-bd17-638b2fd23f97"
+      }
+    }
   }
 }
