--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@react-navigation/stack": "^6.3.20",
     "@realm/react": "^0.6.2",
     "@rneui/base": "^4.0.0-rc.8",
+    "axios": "^1.6.2",
     "clean": "^4.0.2",
     "expo": "^49.0.21",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "fast-xml-parser": "^4.3.2",
     "metro": "^0.80.1",
+    "mongodb": "^6.3.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
